move info toast placement and fix overflow issues

--- a/src/App.scss
+++ b/src/App.scss
@@ -24,4 +24,8 @@ body {
     position: relative;
     bottom: 0;
   }
+
+  .container{
+    overflow: hidden;
+  }
 }
